chore: upgrade dependencies, add AGENTS.md, license, and refactor api
- bump spring boot from 4.0.0 to 4.0.3 and maven wrapper to 3.9.14
- upgrade mysql image from 9.2.0 to 9.6.0 and springdoc-openapi to 3.0.2
- add spring-boot-starter-restclient-test dependency
- add AGENTS.md with coding conventions and workflow guidance
- add MIT license and funding config with buymeacoffee link
- switch update endpoint from PUT to PATCH; delete returns 204 no content
- add GET /api/users/{id} endpoint
- move dto mapping logic into records (toDomain, applyTo, from)
- remove static factory methods from User entity; use @Getter/@Setter over @Data
- rename repository methods to findByUsername/findByEmail; remove @Repository
- remove GroupedOpenApi bean from SwaggerConfig
- expand test coverage: new controller, repository, service, and IT tests
- migrate assertions from assertThrows to AssertJ assertThatThrownBy
- update readme with endpoint list, testing strategy table, and useful commands