@@ -9,16 +9,15 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @RestController
@@ -32,7 +31,13 @@ public class UserController {
         return userService.getUsers()
                 .stream()
                 .map(UserResponse::from)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @GetMapping("/{id}")
+    public UserResponse getUserById(@PathVariable Long id) {
+        User user = userService.validateAndGetUserById(id);
+        return UserResponse.from(user);
     }
 
     @GetMapping("/username/{username}")
@@ -44,23 +49,23 @@ public class UserController {
     @ResponseStatus(HttpStatus.CREATED)
     @PostMapping
     public UserResponse createUser(@Valid @RequestBody CreateUserRequest createUserRequest) {
-        User user = User.from(createUserRequest);
+        User user = createUserRequest.toDomain();
         user = userService.saveUser(user);
         return UserResponse.from(user);
     }
 
-    @PutMapping("/{id}")
+    @PatchMapping("/{id}")
     public UserResponse updateUser(@PathVariable Long id, @Valid @RequestBody UpdateUserRequest updateUserRequest) {
         User user = userService.validateAndGetUserById(id);
-        User.updateFrom(updateUserRequest, user);
+        updateUserRequest.applyTo(user);
         user = userService.saveUser(user);
         return UserResponse.from(user);
     }
 
+    @ResponseStatus(HttpStatus.NO_CONTENT)
     @DeleteMapping("/{id}")
-    public UserResponse deleteUser(@PathVariable Long id) {
+    public void deleteUser(@PathVariable Long id) {
         User user = userService.validateAndGetUserById(id);
         userService.deleteUser(user);
-        return UserResponse.from(user);
     }
 }
